# terminoa

./: Makefile.in  configure  configure.in
src/: DialogCleUSB.ui  IconCleUSB.xpm  IconCleUSBBarre.xpm  IconEchLin.xpm  IconEchLog.xpm  IconModeDiaporama.xpm  IconModeIC.xpm  IconPaletteHalpha.xpm  IconPaletteNB.xpm  IconPaletteNoirBleuBlanc.xpm  IconPaletteNoirOrangeBlanc.xpm  IconPaletteNoirVertBlanc.xpm  IconZoneZ0.xpm  IconZoneZ1.xpm  IconZoneZ2.xpm  IconZoneZ3.xpm  IconZoneZ4.xpm  IconZoneZ5.xpm  IconZoneZ6.xpm  IconZoneZ7.xpm  IconZoneZ8.xpm  IconZoneZ9.xpm  ListesCommandesReponsesTerminOA.h  Makefile.am  Makefile.in  Nuvola_devices_usbpendrive_unmountDG.xpm  Nuvola_devices_usbpendrive_unmountGD.xpm  WidgetZoneImage.cpp  WidgetZoneImage.h  dialogetatscles.cpp  dialogetatscles.h  main.cpp  pointscomm.cpp  pointscomm.h  terminoa.cpp  terminoa.desktop  terminoa.h  trameimage.h
